objects/Member_Badge__c.object
<CustomObject>
    <description>The badges assigned to members. This is a junction object.</description>
    <fields>
        <fullName>Badge__c</fullName>
        <label>Badge</label>
        <referenceTo>Badge__c</referenceTo>
        <relationshipLabel>Member Badges</relationshipLabel>
        <relationshipName>Member_Badges</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Any details pertaining to the badge.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Badges</relationshipLabel>
        <relationshipName>Member_Badges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Member Badge</label>
    <nameField>
        <displayFormat>BADGE-{0000}</displayFormat>
        <label>Badge ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Badges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>